--- a/hhi-app/package.json
+++ b/hhi-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "esbuild": "^0.19.8",
     "firebase": "^10.6.0",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
