--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
     "editor.tabSize": 2,
     "editor.formatOnSave": true,
-    "css.lint.unknownAtRules": "ignore"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+
+    "css.lint.unknownAtRules": "ignore",
+    
+    "eslint.options": {
+      "ignorePath": ".gitignore"
+    },
+    "prettier.ignorePath": ".gitignore"
 }
